# vit-server-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py  main.sh
data/: vit-imagenet1k-B-16.metadata.tannic
include/: server.hpp
model/: vit.hpp  vit.py
